[build-system]
# requires = ["setuptools >= 40.6.0", "wheel"]
requires = ["hatchling", "wheel"]

# build-backend = "setuptools.build_meta"
build-backend = "hatchling.build"

[project]
name="mostfiles"
dynamic = [ "version" ]

# how version managed by hatch
# version="0.1.17"

dependencies = [
]
authors = [
  { name="Yaroslav Polyakov", email="yaroslaff@gmail.com" },
]
description = "Find directories which contains most files"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yaroslaff/mostfiles"
Issues = "https://github.com/yaroslaff/mostfiles/issues"


[project.scripts]
mostfiles = "mostfiles:main"

[tool.hatch.version]
path = 'mostfiles/__init__.py'
